--- a/ProyectoPBD/app/views/operador/usuarios_reg.html.erb
+++ b/ProyectoPBD/app/views/operador/usuarios_reg.html.erb
@@ -20,7 +20,7 @@
 		<div class="col-lg-8">
           <div class="panel panel-primary">
                 <!-- Default panel contents -->
-                <div class="panel-heading">Lista de clientes Naturales</div>
+                <div class="panel-heading center">Lista de clientes Naturales</div>
                 <div class="panel-body">
                   <p class="center"> En esta sección es posible ver, agregar o modificar clientes registrados en ActiveCab.<br>
                   
