--- a/ProyectoPBD/app/views/travel_requests/new.html.erb
+++ b/ProyectoPBD/app/views/travel_requests/new.html.erb
@@ -39,7 +39,7 @@
 
 <% end %>
 </div>
-<%= button_to 'Volver', :controller=>'home' , :method => 'get', :class => 'btn btn-default'%>
+<%= button_to 'Volver', {:controller=>'home' , :method => 'get'}, :class => 'btn btn-default'%>
 </div>
 
 
