--- a/ProyectoPBD/app/views/operador/disp_conductor.html.erb
+++ b/ProyectoPBD/app/views/operador/disp_conductor.html.erb
@@ -1,5 +1,5 @@
 <br>
-<div class="container">
+<div class="container marg2">
         <div class="row">
             <div class="col-lg-12 ">
 			<ul class="nav nav-pills nav-stacked largo">
