--- a/ProyectoPBD/app/views/layouts/application.html.erb
+++ b/ProyectoPBD/app/views/layouts/application.html.erb
@@ -298,7 +298,8 @@
 
 <!--Fin Cabecera -->
 <div class="padre marg1">
-<body>
+
+<body onload="initialize()" onunload="GUnload()" style="font-family: Arial;border: 0 none;">
 <br><br>
   <!--<p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
