--- a/ProyectoPBD/app/views/conductor/calendario.html.erb
+++ b/ProyectoPBD/app/views/conductor/calendario.html.erb
@@ -1,16 +1,70 @@
-<h1>Conductor#calendario</h1>
-<p>Find me in app/views/conductor/calendario.html.erb</p>
-<div class="btn-group">
-  <button type="button" class="btn btn-danger">Action</button>
-  <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown">
-    <span class="caret"></span>
-    <span class="sr-only">Toggle Dropdown</span>
-  </button>
-  <ul class="dropdown-menu" role="menu">
-    <li><a href="#">Action</a></li>
-    <li><a href="#">Another action</a></li>
-    <li><a href="#">Something else here</a></li>
-    <li class="divider"></li>
-    <li><a href="#">Separated link</a></li>
-  </ul>
-</div>
+<br>
+      <div class="container marg2">
+      <br>
+        <div class="row">
+            <div class="col-lg-12 ">
+              <h1>Viajes</h1><br>
+              <div class="col-lg-4 ">
+                 <ul class="nav nav-pills nav-stacked largo">
+                   <li> <%=link_to "Viajes", :controller => :conductor, :action => :index %> </li>
+                   <li class="active"> <%=link_to "Ruta de viaje", :controller => :conductor, :action => :calendario %> </li>
+                 </ul>
+
+                
+
+
+
+            </div>
+            <div class="col-lg-8">
+
+
+
+    <!--inicio appi-->
+        <form action="#" onsubmit="setDirections(this.from.value, this.to.value, this.locale.value); return false">
+          <table>
+            <tr>
+              <th align="right">From:&nbsp;</th>
+              <td>
+                <input type="text" size="25" id="fromAddress" name="from" value="Universidad de Santiago"/>
+              <td>
+                <th align="right">&nbsp;&nbsp;To:&nbsp;</th>
+                <td align="right"><input type="text" size="25" id="toAddress" name="to" value="Condor 773 Santiago" />
+              <td>
+            </tr>
+            <tr>
+              <th>Language:&nbsp;</th>
+              
+              
+              <td colspan="3">
+               <select id="locale" name="locale">
+                  <option value="en">English</option>
+                  <option value="fr">French</option>
+                  <option value="de">German</option>
+                  <option value="ja">Japanese</option>
+                  <option value="es" selected>Spanish</option>
+                </select> 
+
+                <input name="submit" type="submit" value="Ver recorrido" />
+              <td>
+            </tr>
+         </table>
+        </form>
+        <br/>
+        <table class="directions">
+          <tr>
+            <th>Información de viaje</th><th>Mapa</th>
+          </tr>
+          <tr>
+            <td valign="top">
+              <div id="directions" style="width: 275px"></div>
+            <td>
+            <td valign="top">
+              <div id="map_canvas" style="width: 310px; height: 400px"></div>
+            <td>
+          </tr>
+        </table>    
+        <!--fin appi-->
+
+    </div>
+
+    </div></div></div>
