--- a/ProyectoPBD/app/views/vehicles/_form.html.erb
+++ b/ProyectoPBD/app/views/vehicles/_form.html.erb
@@ -13,8 +13,10 @@
 
   <div class="field">
     <%= f.label :Propietario %><br>
-    <!--<%= f.text_field :run_own %> -->
-    <p><%= f.select :run_own, options_for_select(@owners.collect{ |oww| ["Nombre: "+oww.nom_prop+", Rut: "+oww.run_own ,oww.run_own] })%></p>
+    <p><%= f.select :run_own, options_for_select(@owners.collect{ |ow| ["Nombre: "+ow.nom_prop+", Rut: "+ow.run_own ,ow.run_own] })%></p>
+
+
+
   </div>
   <div class="field">
     <%= f.label :Patente_Vehículo %><br>
