'vistas_revision_final'

--- a/ProyectoPBD/app/views/drivers/index.html.erb
+++ b/ProyectoPBD/app/views/drivers/index.html.erb
@@ -1,4 +1,8 @@
-
+<div class="container marg2">
+    <br>
+    <br><br>
+        <div class="row">
+            <div class="col-lg-12 ">
   <h1>Listar Conductores</h1>
 
 <br><br><br>
@@ -52,3 +56,4 @@
   <%= button_to 'Nuevo', new_driver_path, :method => 'get', :class => 'btn btn-default'%>
 
 
+</div></div></div></div>
