--- a/ProyectoPBD/app/views/drivers/show.html.erb
+++ b/ProyectoPBD/app/views/drivers/show.html.erb
@@ -1,3 +1,8 @@
+<div class="container marg2">
+    <br>
+    <br><br>
+        <div class="row">
+            <div class="col-lg-12 ">
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -37,3 +42,5 @@
 
 <%= button_to 'Editar', edit_driver_path(@driver), :method => 'get', :class => 'btn btn-warning' %> |
 <%= button_to 'Volver', drivers_path, :method => 'get', :class => 'btn btn-default'%>
+
+</div></div></div>
