--- a/ProyectoPBD/app/views/home/index.html.erb
+++ b/ProyectoPBD/app/views/home/index.html.erb
@@ -77,7 +77,7 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Accede desde cualquier dispositivo<span class="text-muted">Checkmate.</span></h2>Inténtalo ya!
+          <h2 class="featurette-heading">Accede desde cualquier dispositivo<span class="text-muted">  Inténtalo ya!.</span></h2>
           <p class="lead">
             Prueba accediendo a nuestra web desde tu notebook, tablet o smartphone; con acceso a Internet y solicita tu servicio de RadioTaxis
               
