--- a/ProyectoPBD/app/views/admin/usuarios.html.erb
+++ b/ProyectoPBD/app/views/admin/usuarios.html.erb
@@ -1,10 +1,11 @@
-<% if user_signed_in? and current_user.tipo == 'administrador' %>
 <div class="container marg2">
 		<br><br><br>
 
         <div class="row">
 
             <div class="col-lg-12 ">
+
+<% if user_signed_in? and current_user.tipo == 'administrador' %>
                	<%= button_to 'Atras', :back, :class => "btn btn-primary" %>
 
 				<div class="row cn1">
@@ -31,7 +32,7 @@
 
 					</div>
 					<div class="col-lg-4 ">
-						<%= link_to image_tag("http://www.nocedal.cl/nuevo-sitio/wp-content/themes/nocedal_theme/img/cumple_icon_big.png", :height=> 150, :class=>'img-circle img-borde'), :controller => 'external_enterprise'%>
+						<%= link_to image_tag("http://www.nocedal.cl/nuevo-sitio/wp-content/themes/nocedal_theme/img/cumple_icon_big.png", :height=> 150, :class=>'img-circle img-borde'), :controller => 'external_enterprises'%>
 
 						<h3>Empresas</h3>
 												<hr>
