--- a/ProyectoPBD/app/views/drivers/edit.html.erb
+++ b/ProyectoPBD/app/views/drivers/edit.html.erb
@@ -1,6 +1,12 @@
+<div class="container marg2">
+    <br>
+    <br><br>
+        <div class="row">
+            <div class="col-lg-12 ">
 <h1>Editar Conductores</h1>
 
 <%= render 'form' %>
 
 <%= button_to 'Ver', @driver, :method => 'get', :class => 'btn btn-info' %> |
 <%= button_to 'Volver', drivers_path, :method => 'get', :class => 'btn btn-default' %>
+</div></div></div>
