--- a/ProyectoPBD/app/views/drivers/new.html.erb
+++ b/ProyectoPBD/app/views/drivers/new.html.erb
@@ -1,5 +1,11 @@
+<div class="container marg2">
+    <br>
+    <br><br>
+        <div class="row">
+            <div class="col-lg-12 ">
 <h1>Nuevo Conductor</h1>
 
 <%= render 'form' %>
 
 <%= button_to 'Volver', drivers_path, :method => 'get', :class => 'btn btn-default' %>
+</div></div></div>
