--- a/ProyectoPBD/app/views/enterprise_clients/edit.html.erb
+++ b/ProyectoPBD/app/views/enterprise_clients/edit.html.erb
@@ -1,9 +1,17 @@
-<% if user_signed_in? and current_user.tipo == 'administrador' %>
+<div class="container marg2">
+    <br>
+    <br><br>
+        <div class="row">
+            <div class="col-lg-12 ">
 
-	<h1>Editar Cliente Empresa</h1>
+				<% if user_signed_in? and current_user.tipo == 'administrador' %>
 
-	<%= render 'form' %>
+					<h1>Editar Cliente Empresa</h1>
 
-	<%= button_to 'Ver', @enterprise_client, :method => 'get', :class => 'btn btn-info' %> |
-	<%= button_to 'Volver', enterprise_clients_path, :method => 'get', :class => 'btn btn-default' %>
-<% end %>
+					<%= render 'form' %>
+
+					<%= button_to 'Ver', @enterprise_client, :method => 'get', :class => 'btn btn-info' %> |
+					<%= button_to 'Volver', enterprise_clients_path, :method => 'get', :class => 'btn btn-default' %>
+				<% end %>
+
+</div></div></div>
