--- a/ProyectoPBD/app/views/enterprise_clients/new.html.erb
+++ b/ProyectoPBD/app/views/enterprise_clients/new.html.erb
@@ -1,3 +1,9 @@
+<div class="container marg2">
+    <br>
+    <br><br>
+        <div class="row">
+            <div class="col-lg-12 ">
+
 <% if user_signed_in? and current_user.tipo == 'administrador' %>
 
 	<h1>Nuevo Cliente Empresa</h1>
@@ -7,3 +13,5 @@
 	<%= button_to 'Volver', enterprise_clients_path, :method => 'get', :class => 'btn btn-default' %>
 
 <% end %>
+
+</div></div></div>
