--- a/ProyectoPBD/app/views/enterprise_clients/show.html.erb
+++ b/ProyectoPBD/app/views/enterprise_clients/show.html.erb
@@ -1,18 +1,26 @@
-<% if user_signed_in? and current_user.tipo == 'administrador' %>
+<div class="container marg2">
+    <br>
+    <br><br>
+        <div class="row">
+            <div class="col-lg-12 ">
 
-	<p id="notice"><%= notice %></p>
+				<% if user_signed_in? and current_user.tipo == 'administrador' %>
 
-	<p>
-	  <strong>Run cliente:</strong>
-	  <%= @enterprise_client.run_cli %>
-	</p>
+					<p id="notice"><%= notice %></p>
 
-	<p>
-	  <strong>Rut empresa:</strong>
-	  <%= @enterprise_client.rut_ent %>
-	</p>
+					<p>
+					  <strong>Run cliente:</strong>
+					  <%= @enterprise_client.run_cli %>
+					</p>
 
-	<%= button_to 'Editar', edit_enterprise_client_path(@enterprise_client), :method => 'get', :class => 'btn btn-warning' %> |
-	<%= button_to 'Volver', enterprise_clients_path, :method => 'get', :class => 'btn btn-default' %>
+					<p>
+					  <strong>Rut empresa:</strong>
+					  <%= @enterprise_client.rut_ent %>
+					</p>
 
-<% end %>
+					<%= button_to 'Editar', edit_enterprise_client_path(@enterprise_client), :method => 'get', :class => 'btn btn-warning' %> |
+					<%= button_to 'Volver', enterprise_clients_path, :method => 'get', :class => 'btn btn-default' %>
+
+				<% end %>
+
+</div></div></div>
