--- a/ProyectoPBD/app/views/external_enterprises/_form2.html.erb
+++ b/ProyectoPBD/app/views/external_enterprises/_form2.html.erb
@@ -40,8 +40,8 @@
     <%= f.text_field :email_emp %>
   </div>
   <div class="field">
-    
-    <%= f.hidden_field :est_conv_emp, :value=>'Activo' %>
+    <%= f.label :Estado_de_convenio %><br>
+    <%= f.text_field :est_conv_emp, :value=>'Activo' %>
   </div>
   <div class="field">
     <%= f.label :Fecha_inicio_convenio %><br>
