--- a/ProyectoPBD/app/views/external_enterprises/index.html.erb
+++ b/ProyectoPBD/app/views/external_enterprises/index.html.erb
@@ -61,3 +61,4 @@
 <br>
 
 <%= button_to 'Nuevo', new_external_enterprise_path, :method => 'get', :class => 'btn btn-default' %>
+</div></div></div></div>
