--- a/ProyectoPBD/app/views/external_enterprises/show.html.erb
+++ b/ProyectoPBD/app/views/external_enterprises/show.html.erb
@@ -1,3 +1,10 @@
+<div class="container marg2">
+    <br><br><br>
+
+        <div class="row">
+
+            <div class="col-lg-12 ">
+
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -57,3 +64,4 @@
 
 <%= button_to 'Editar', edit_external_enterprise_path(@external_enterprise), :method => 'get', :class => 'btn btn-warning' %>
 <%= button_to 'Volver', external_enterprises_path, :method => 'get', :class => 'btn btn-default' %>
+</div></div></div>
