--- a/ProyectoPBD/app/views/offer_vehicles/_form.html.erb
+++ b/ProyectoPBD/app/views/offer_vehicles/_form.html.erb
@@ -12,15 +12,15 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :Id_vehículo %><br>
-    <%= f.number_field :id_veh %>
-  </div>
-  <div class="field">
-    <%= f.label :Id_bloque %><br>
+    <%= f.label :id_block %><br>
     <%= f.number_field :id_block %>
   </div>
   <div class="field">
-    <%= f.label :Estado_oferta_vehículo %><br>
+    <%= f.label :run_driv %><br>
+    <%= f.text_field :run_driv %>
+  </div>
+  <div class="field">
+    <%= f.label :est_oferta_veh %><br>
     <%= f.text_field :est_oferta_veh %>
   </div>
   <div class="actions">
