--- a/ProyectoPBD/app/views/offer_vehicles/edit.html.erb
+++ b/ProyectoPBD/app/views/offer_vehicles/edit.html.erb
@@ -1,12 +1,6 @@
-<div class="container marg2">
-    <br>
-    <br><br>
-        <div class="row">
-            <div class="col-lg-12 ">
-
-<h1>Editar Oferta Vehículo</h1>
+<h1>Editing offer_vehicle</h1>
 
 <%= render 'form' %>
 
-<%= button_to 'Ver', @offer_vehicle , :method => 'get', :class => 'btn btn-info'%> |
-<%= button_to 'Volver', offer_vehicles_path, :method => 'get', :class => 'btn btn-default'%>
+<%= link_to 'Show', @offer_vehicle %> |
+<%= link_to 'Back', offer_vehicles_path %>
