--- a/ProyectoPBD/app/views/offer_vehicles/new.html.erb
+++ b/ProyectoPBD/app/views/offer_vehicles/new.html.erb
@@ -1,5 +1,5 @@
-	<h1>Nueva Oferta Vehículo</h1>
+<h1>New offer_vehicle</h1>
 
-	<%= render 'form' %>
+<%= render 'form' %>
 
-	<%= button_to 'Volver', offer_vehicles_path, :method => 'get', :class => 'btn btn-default' %>
+<%= link_to 'Back', offer_vehicles_path %>
