'vista_admin_ready'

--- a/ProyectoPBD/app/views/admin/index.html.erb
+++ b/ProyectoPBD/app/views/admin/index.html.erb
@@ -27,12 +27,12 @@
 
 					      <!-- List group -->
 					      <ul class="list-group">
-					        <li class="list-group-item">Valor Kilometro</li>
-					        <li class="list-group-item">Valor base o Bajada de bandera</li>
-					        <li class="list-group-item">Comisión de dueños de vehículos</li>
-					        <li class="list-group-item">Mensaje del sistema para la revisión técnica</li>
-					        <li class="list-group-item">Comunas en las cuales los taxis trabajan</li>
-					        <li class="list-group-item">Viajes con tarifas fijas</li>
+					        <li class="list-group-item">Valor Kilometro: Es posible modificar el valor del kilómetro para el calculo de cada viaje a realizar</li>
+					        <li class="list-group-item">Valor base o Bajada de bandera: Representa el costo fijo asociado a cada viaje</li>
+					        <li class="list-group-item">Comisión de dueños de vehículos: Porcentaje que recibirán los dueños de los vehículos de acuerdo al uso que esto presenten</li>
+					        <li class="list-group-item">Mensaje del sistema para la revisión técnica: Es posible modificar el mensaje que se enviará por la revisión técnica</li>
+					        <li class="list-group-item">Comunas en las cuales los taxis trabajan: Comunas en las cuales se realizan los viajes, representa el dominio de ActiveCab</li>
+					        <li class="list-group-item">Viajes con tarifas fijas: Viajes frecuentes de costo fijo, se puede apreciar en la vista de servicios y tarifas, del menú principal de la página</li>
 					      </ul>
 					    </div>
 					  </div>
