--- a/ProyectoPBD/app/views/admin/usuarios.html.erb
+++ b/ProyectoPBD/app/views/admin/usuarios.html.erb
@@ -22,7 +22,7 @@
 
 					</div>
 					<div class="col-lg-4 ">
-						<%= link_to image_tag("https://cdn0.iconfinder.com/data/icons/online-shopping-3/78/Shopping_icons_vector-14-512.png", :height=> 150, :class=>'img-circle img-borde'), :controller => 'users'%>
+						<%= link_to image_tag("http://www.marketingdirecto.com/wp-content/uploads/2012/08/operador2.jpg", :height=> 150, :class=>'img-circle img-borde'), :controller => 'operador'%>
 
 						<h3>Operadores</h3>
 												<hr>
@@ -49,10 +49,10 @@
             <div class="col-lg-12 ">
 				<div class="row cn1">
 					<div class="col-lg-4 ">
-						<%= link_to image_tag("http://www.s3p.es/docs/servicios/noticia-1380094853.png", :height=> 150, :class=>'img-circle img-borde'), :controller => 'natural_clients'%>
+						<%= link_to image_tag("http://img.bhs4.com/29/7/29776c4bb817570552213b12b1b4179f19fbce4c_large.jpg", :height=> 150, :class=>'img-circle img-borde'), :controller => 'roles'%>
 
 
-						<h3>Cliente Natural</h3>
+						<h3>Roles de usuarios</h3>
 												<hr>
 
 				
@@ -62,7 +62,7 @@
 
 					</div>
 					<div class="col-lg-4 ">
-						<%= link_to image_tag("http://www.orbitalpharma.com/clientes_files/icon-service.jpg", :height=> 150, :class=>'img-circle img-borde'), :controller => 'enterprise_clients'%>
+						<%= link_to image_tag("http://www.orbitalpharma.com/clientes_files/icon-service.jpg", :height=> 150, :class=>'img-circle img-borde')%>
 
 						<h3>Cliente Empresa</h3>
 												<hr>
@@ -72,7 +72,7 @@
 
 					</div>
 					<div class="col-lg-4 ">
-						<%= link_to image_tag("http://previewcf.turbosquid.com/Preview/Content_2010_10_05__13_25_34/NY_cab_01.jpg6e52d934-0bfe-45c8-8fa2-c925bff51d06Larger.jpg", :height=> 150, :class=>'img-circle img-borde'), :controller => 'concepts'%>
+						<%= link_to image_tag("http://previewcf.turbosquid.com/Preview/Content_2010_10_05__13_25_34/NY_cab_01.jpg6e52d934-0bfe-45c8-8fa2-c925bff51d06Larger.jpg", :height=> 150, :class=>'img-circle img-borde'), :controller => 'vehicles'%>
 
 
 						<h3>Vehículos</h3>
