--- a/ProyectoPBD/app/views/concepts/edit.html.erb
+++ b/ProyectoPBD/app/views/concepts/edit.html.erb
@@ -1,3 +1,10 @@
+<div class="container marg2">
+		<br><br><br>
+
+        <div class="row">
+
+            <div class="col-lg-12 ">
+
 	<h1>Editar Concepto</h1>
 
 	<%= render 'form' %>
@@ -5,3 +12,5 @@
 	<%= button_to 'Ver', @concept, :method => 'get', :class => 'btn btn-info' %> |
 	<%= button_to 'Volver', concepts_path, :method => 'get', :class => 'btn btn-default' %>
 
+
+</div></div></div>
