--- a/ProyectoPBD/app/views/concepts/show.html.erb
+++ b/ProyectoPBD/app/views/concepts/show.html.erb
@@ -1,3 +1,9 @@
+<div class="container marg2">
+		<br><br><br>
+
+        <div class="row">
+
+            <div class="col-lg-12 ">
 
 
 	<p id="notice"><%= notice %></p>
@@ -10,3 +16,5 @@
 	<%= button_to 'Editar', edit_concept_path(@concept) , :method => 'get', :class => 'btn btn-warning'%> |
 	<%= button_to 'Volver', concepts_path, :method => 'get', :class => 'btn btn-default' %>
 
+
+</div></div></div>
