--- a/ProyectoPBD/app/views/vehicles/show.html.erb
+++ b/ProyectoPBD/app/views/vehicles/show.html.erb
@@ -1,3 +1,10 @@
+<div class="container marg2">
+
+    <br>
+    <br><br>
+        <div class="row">
+            <div class="col-lg-12 ">
+
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -32,3 +39,5 @@
 
 <%= button_to 'Editar', edit_vehicle_path(@vehicle), :method => 'get', :class => 'btn btn-info' %> |
 <%= button_to 'Volver', vehicles_path, :method => 'get', :class => 'btn btn-default' %>
+
+</div></div></div>
