--- a/ProyectoPBD/app/views/admin/usuarios.html.erb
+++ b/ProyectoPBD/app/views/admin/usuarios.html.erb
@@ -14,7 +14,7 @@
 
 						<h3>Conductores</h3>
 						<hr>
-
+						
 				
 						<br><br>
 
@@ -22,13 +22,10 @@
 
 					</div>
 					<div class="col-lg-4 ">
-						<%= link_to image_tag("http://www.marketingdirecto.com/wp-content/uploads/2012/08/operador2.jpg", :height=> 150, :class=>'img-circle img-borde'), :controller => 'operador'%>
-
-						<h3>Operadores</h3>
-												<hr>
-				
-						<br><br>
-
+						
+						<%= link_to image_tag("http://www.langevin.com/wp-content/uploads/2013/09/Agenda_flipchart.jpg", :height=> 150, :class=>'img-circle img-borde'), :controller => 'offer_vehicles'%>
+						<h3>Oferta de vehículos</h3>
+							<hr>
 
 					</div>
 					<div class="col-lg-4 ">
@@ -62,12 +59,6 @@
 
 					</div>
 					<div class="col-lg-4 ">
-						<%= link_to image_tag("http://www.orbitalpharma.com/clientes_files/icon-service.jpg", :height=> 150, :class=>'img-circle img-borde')%>
-
-						<h3>Cliente Empresa</h3>
-												<hr>
-
-						<br><br>
 
 
 					</div>
