--- a/ProyectoPBD/app/views/layouts/application.html.erb
+++ b/ProyectoPBD/app/views/layouts/application.html.erb
@@ -176,7 +176,7 @@
         <li> <%= link_to "Inicio", :controller => :home, :action => :index %></li>
         <li> <%= link_to "Servicios y tarifas", :controller => :welcome, :action => :tarifas %></li>
         <li> <%= link_to "Quiénes somos", :controller => :welcome, :action => :qs %></li>
-        <li> <%= link_to "Administrador", :controller => :admin%></li>
+        <li> <%= link_to "Administrar", :controller => :admin%></li>
         <!--<li><a href="welcome/qs"><i class="fa fa-university"></i> Quiénes somos</a></li>-->
       </ul>
       <ul class="nav navbar-nav navbar-right">
