--- a/ProyectoPBD/app/views/offer_vehicles/index.html.erb
+++ b/ProyectoPBD/app/views/offer_vehicles/index.html.erb
@@ -1,11 +1,17 @@
-<h1>Listing offer_vehicles</h1>
+<div class="container marg2">
+    <br>
+    <br><br>
+        <div class="row">
+            <div class="col-lg-12 ">
+
+<h1>Listado de ofertas de vehículos</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Id block</th>
-      <th>Run driv</th>
-      <th>Est oferta veh</th>
+      <th>Id bloque</th>
+      <th>Rut conductor</th>
+      <th>Estado oferta vehículo</th>
       <th></th>
       <th></th>
       <th></th>
@@ -29,3 +35,4 @@
 <br>
 
 <%= link_to 'New Offer vehicle', new_offer_vehicle_path %>
+</div></div></div>
