--- a/ProyectoPBD/app/views/offer_vehicles/show.html.erb
+++ b/ProyectoPBD/app/views/offer_vehicles/show.html.erb
@@ -1,19 +1,26 @@
+<div class="container marg2">
+    <br>
+    <br><br>
+        <div class="row">
+            <div class="col-lg-12 ">
+
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Id block:</strong>
+  <strong>Id bloque:</strong>
   <%= @offer_vehicle.id_block %>
 </p>
 
 <p>
-  <strong>Run driv:</strong>
+  <strong>Rut conductor:</strong>
   <%= @offer_vehicle.run_driv %>
 </p>
 
 <p>
-  <strong>Est oferta veh:</strong>
+  <strong>Estado oferta de vehículo:</strong>
   <%= @offer_vehicle.est_oferta_veh %>
 </p>
 
-<%= link_to 'Edit', edit_offer_vehicle_path(@offer_vehicle) %> |
-<%= link_to 'Back', offer_vehicles_path %>
+<%= link_to 'Editar', edit_offer_vehicle_path(@offer_vehicle) %> |
+<%= link_to 'Atras', offer_vehicles_path %>
+</div></div></div>
