--- a/ProyectoPBD/app/views/offer_vehicles/new.html.erb
+++ b/ProyectoPBD/app/views/offer_vehicles/new.html.erb
@@ -1,5 +1,12 @@
-<h1>New offer_vehicle</h1>
+<div class="container marg2">
+    <br>
+    <br><br>
+        <div class="row">
+            <div class="col-lg-12 ">
+
+<h1>Nueva oferta de vehículos</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Back', offer_vehicles_path %>
+</div></div></div>
