--- a/ProyectoPBD/app/views/vehicles/show.html.erb
+++ b/ProyectoPBD/app/views/vehicles/show.html.erb
@@ -8,7 +8,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Run dueño:</strong>
+  <strong>Rut dueño:</strong>
   <%= @vehicle.run_own %>
 </p>
 
