--- a/ProyectoPBD/app/views/admin/index.html.erb
+++ b/ProyectoPBD/app/views/admin/index.html.erb
@@ -58,12 +58,12 @@
 
 					      <!-- List group -->
 					      <ul class="list-group">
-					        <li class="list-group-item">Conductores</li>
-					        <li class="list-group-item">Operadores</li>
-					        <li class="list-group-item">Empresas</li>
-					        <li class="list-group-item">Clientes Naturales</li>
-					        <li class="list-group-item">Cliente Empresa</li>
-					        <li class="list-group-item">Vehículos</li>
+					        <li class="list-group-item">Conductores: Modificar los datos de los conductores</li>
+					        <li class="list-group-item">Oferta de vehículos: Se pueden asignar los bloques horarios a los conductores </li>
+					        <li class="list-group-item">Empresas: Se puede agregar una empresa afiliada con ActiveCab</li>
+					        <li class="list-group-item">Roles: Es posible modificar el tipo de usuario del sistema, es decir, asignar distintos privilegios</li>
+					        
+					        <li class="list-group-item">Vehículos: Es posible crear o modificar vehículos asociados a su dueño</li>
 					      </ul>
 					    </div>
 					  </div>
