--- a/ProyectoPBD/app/views/offer_vehicles/index.html.erb
+++ b/ProyectoPBD/app/views/offer_vehicles/index.html.erb
@@ -34,5 +34,5 @@
 
 <br>
 
-<%= link_to 'New Offer vehicle', new_offer_vehicle_path %>
+<%= button_to 'Nueva oferta de vehículo', new_offer_vehicle_path, :metho=>'get', :class=>'btn btn-default' %>
 </div></div></div>
