--- a/ProyectoPBD/app/views/travel_requests/edit.html.erb
+++ b/ProyectoPBD/app/views/travel_requests/edit.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Editar Solicitud Viaje</h1>
 
-<%= render 'form' %>
+<%= render 'form2' %>
 
 <%= button_to 'Ver', @travel_request, :method => 'get', :class => 'btn btn-info' %> 
 <%= button_to 'Volver', travel_requests_path, :method => 'get', :class => 'btn btn-default' %>
