--- a/ProyectoPBD/app/views/conductor/index.html.erb
+++ b/ProyectoPBD/app/views/conductor/index.html.erb
@@ -1,5 +1,6 @@
 
       <div class="container marg2">
+      <% if user_signed_in? and current_user.tipo == 'conductor' %>
       <br><br>
         <div class="row">
             <div class="col-lg-12 ">
@@ -59,7 +60,9 @@
 
         </div>      
     </div>
-    </div>    </div>
+    </div>   
+<% end %>
+     </div>
 
 
 
