--- a/ProyectoPBD/app/views/drivers/edit.html.erb
+++ b/ProyectoPBD/app/views/drivers/edit.html.erb
@@ -1,4 +1,5 @@
 <div class="container marg2">
+<% if user_signed_in? and current_user.tipo == 'administrador' %>
     <br>
     <br><br>
         <div class="row">
@@ -9,4 +10,6 @@
 
 <%= button_to 'Ver', @driver, :method => 'get', :class => 'btn btn-info' %> |
 <%= button_to 'Volver', drivers_path, :method => 'get', :class => 'btn btn-default' %>
-</div></div></div>
+</div></div>
+<% end %>
+</div>
