--- a/ProyectoPBD/app/views/drivers/index.html.erb
+++ b/ProyectoPBD/app/views/drivers/index.html.erb
@@ -1,4 +1,5 @@
 <div class="container marg2">
+<% if user_signed_in? and current_user.tipo == 'administrador' %>
     <br>
     <br><br>
         <div class="row">
@@ -56,4 +57,6 @@
   <%= button_to 'Nuevo', new_driver_path, :method => 'get', :class => 'btn btn-default'%>
 
 
-</div></div></div></div>
+</div></div></div>
+<% end %>
+</div>
