--- a/ProyectoPBD/app/views/drivers/new.html.erb
+++ b/ProyectoPBD/app/views/drivers/new.html.erb
@@ -1,4 +1,5 @@
 <div class="container marg2">
+<% if user_signed_in? and current_user.tipo == 'administrador' %>
     <br>
     <br><br>
         <div class="row">
@@ -8,4 +9,6 @@
 <%= render 'form' %>
 
 <%= button_to 'Volver', drivers_path, :method => 'get', :class => 'btn btn-default' %>
-</div></div></div>
+</div></div>
+<% end %>
+</div>
