--- a/ProyectoPBD/app/views/offer_vehicles/edit.html.erb
+++ b/ProyectoPBD/app/views/offer_vehicles/edit.html.erb
@@ -6,10 +6,10 @@
 
 <h1>Editando oferta de vehículos</h1>
 
-<%= render 'form' %>
+<%= render 'form2' %>
 
-<%= link_to 'Show', @offer_vehicle %> |
-<%= link_to 'Back', offer_vehicles_path %>
+<%= button_to 'Show', @offer_vehicle, :method=>'get', :class=>'btn btn-info' %> |
+<%= button_to 'Back', {:controller=>'home'}, :method=>'get', :class=>'btn btn-default' %>
 
 
 </div></div></div>
