--- a/ProyectoPBD/app/views/offer_vehicles/new.html.erb
+++ b/ProyectoPBD/app/views/offer_vehicles/new.html.erb
@@ -8,5 +8,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', offer_vehicles_path %>
+<%= button_to 'Volver',{:controller=>"home"}, :method=>'get', :class=> 'btn btn-default' %>
 </div></div></div>
