'imagenes_fijas_admin'

--- a/ProyectoPBD/app/views/admin/costos_otros.html.erb
+++ b/ProyectoPBD/app/views/admin/costos_otros.html.erb
@@ -11,7 +11,7 @@
 				<div class="row cn1">
 					<div class="col-lg-4 ">
 							<!--<a href="#"><img class="img-circle img-borde" height="250px" src="https://lh4.ggpht.com/xy_lXoF9yFyIYHPgu4nHF-7-kMUmIvQzahQRG9LlsKmJ23KRpAs_RAYurSbzpzseo-Rc=w300" /></a> -->
-						<%= link_to image_tag("https://lh4.ggpht.com/xy_lXoF9yFyIYHPgu4nHF-7-kMUmIvQzahQRG9LlsKmJ23KRpAs_RAYurSbzpzseo-Rc=w300", :height=> 150, :class=>'img-circle img-borde'), :controller => 'kilometers_prices'%>
+						<%= link_to image_tag("../../assets/admin3.png", :height=> 150, :class=>'img-circle img-borde'), :controller => 'kilometers_prices'%>
 
 						<h3>Valor Kilometro</h3>
 												<hr>
@@ -24,7 +24,7 @@
 					</div>
 					<div class="col-lg-4 ">
 							
-							<%= link_to image_tag("http://images.all-free-download.com/images/graphiclarge/checkered_flag_101462.jpg", :height=> 150, :class=>'img-circle img-borde'), :controller => 'base_prices'%>
+							<%= link_to image_tag("../../assets/admin4.jpg", :height=> 150, :class=>'img-circle img-borde'), :controller => 'base_prices'%>
 
 						<h3>Bajada de bandera</h3>
 												<hr>
@@ -34,7 +34,7 @@
 
 					</div>
 					<div class="col-lg-4 ">
-					<%= link_to image_tag("http://2.bp.blogspot.com/-Ya4hin4tBrM/UW6G_Cze4BI/AAAAAAAABEI/bifVd-WMILI/s1600/porcentaje1.jpg", :height=> 150, :class=>'img-circle img-borde'), :controller => 'owner_commissions'%>
+					<%= link_to image_tag("../../assets/admin5.jpg", :height=> 150, :class=>'img-circle img-borde'), :controller => 'owner_commissions'%>
 
 					
 						
@@ -54,7 +54,7 @@
 				<div class="row cn1">
 					<div class="col-lg-4 ">
 
-						<%= link_to image_tag("http://www.s3p.es/docs/servicios/noticia-1380094853.png", :height=> 150, :class=>'img-circle img-borde'), :controller => 'technical_review_alerts'%>
+						<%= link_to image_tag("../../assets/admin6.jpg", :height=> 150, :class=>'img-circle img-borde'), :controller => 'technical_review_alerts'%>
 
 						<h3>Mensaje revisión técnica</h3>
 												<hr>				
@@ -65,7 +65,7 @@
 					</div>
 					<div class="col-lg-4 ">
 
-						<%= link_to image_tag("http://conconchile.cl/wp-content/uploads/2013/06/google-maps-icon.jpg", :height=> 150, :class=>'img-circle img-borde'), :controller => 'comunnes'%>
+						<%= link_to image_tag("../../assets/admin7.png", :height=> 150, :class=>'img-circle img-borde'), :controller => 'comunnes'%>
 
 
 						<h3>Comunas</h3>
@@ -76,7 +76,7 @@
 					</div>
 					<div class="col-lg-4 ">
 
-						<%= link_to image_tag("http://www.ctbay.com/templates/18/images/fees_icon.jpg", :height=> 150, :class=>'img-circle img-borde'), :controller => 'fixed_rates'%>
+						<%= link_to image_tag("../../assets/admin7.jpg", :height=> 150, :class=>'img-circle img-borde'), :controller => 'fixed_rates'%>
 
 						<h3>Tarifas Fijas</h3>
 												<hr>				
