--- a/ProyectoPBD/app/views/admin/index.html.erb
+++ b/ProyectoPBD/app/views/admin/index.html.erb
@@ -15,7 +15,7 @@
 					      <div class="panel-body">
 
 						<hr>
-							<%= link_to image_tag("http://1.bp.blogspot.com/_COiSBqI9PLE/Sg8xxy1U72I/AAAAAAAAAX8/PV_9VhRQygw/s400/WEB+Icono+Pagina+Web+en+Construccion.jpg", :height=> 250, :class=>'img-circle img-borde'), :controller => 'admin', :action => 'costos_otros'%>
+							<%= link_to image_tag("../../assets/admin1.jpg", :height=> 250, :class=>'img-circle img-borde'), :controller => 'admin', :action => 'costos_otros'%>
 
 
 				
@@ -49,7 +49,7 @@
 
 						
 						<hr>
-							<%= link_to image_tag("http://imagenes.es.sftcdn.net/blog/es/2010/07/user-account-control-icon.jpg", :height=> 250, :class=>'img-circle img-borde'), :controller => 'admin', :action => 'usuarios'%>
+							<%= link_to image_tag("admin2.jpg", :height=> 250, :class=>'img-circle img-borde'), :controller => 'admin', :action => 'usuarios'%>
 
 								<br><br><br><br>
 				
