--- a/ProyectoPBD/app/views/admin/usuarios.html.erb
+++ b/ProyectoPBD/app/views/admin/usuarios.html.erb
@@ -10,7 +10,7 @@
 
 				<div class="row cn1">
 					<div class="col-lg-4 ">
-						<%= link_to image_tag("http://fc01.deviantart.net/fs70/f/2011/252/e/b/chauffeur_hat_by_pukey187-d49bahz.png", :height=> 150, :class=>'img-circle img-borde'), :controller => 'drivers'%>
+						<%= link_to image_tag("../../assets/admin8.jpg", :height=> 150, :class=>'img-circle img-borde'), :controller => 'drivers'%>
 
 						<h3>Conductores</h3>
 						<hr>
@@ -23,13 +23,13 @@
 					</div>
 					<div class="col-lg-4 ">
 						
-						<%= link_to image_tag("http://www.langevin.com/wp-content/uploads/2013/09/Agenda_flipchart.jpg", :height=> 150, :class=>'img-circle img-borde'), :controller => 'offer_vehicles'%>
+						<%= link_to image_tag("../../assets/admin9.jpg", :height=> 150, :class=>'img-circle img-borde'), :controller => 'offer_vehicles'%>
 						<h3>Oferta de vehículos</h3>
 							<hr>
 
 					</div>
 					<div class="col-lg-4 ">
-						<%= link_to image_tag("http://www.nocedal.cl/nuevo-sitio/wp-content/themes/nocedal_theme/img/cumple_icon_big.png", :height=> 150, :class=>'img-circle img-borde'), :controller => 'external_enterprises'%>
+						<%= link_to image_tag("../../assetsadmin10.jpg", :height=> 150, :class=>'img-circle img-borde'), :controller => 'external_enterprises'%>
 
 						<h3>Empresas</h3>
 												<hr>
@@ -46,7 +46,7 @@
             <div class="col-lg-12 ">
 				<div class="row cn1">
 					<div class="col-lg-4 ">
-						<%= link_to image_tag("http://img.bhs4.com/29/7/29776c4bb817570552213b12b1b4179f19fbce4c_large.jpg", :height=> 150, :class=>'img-circle img-borde'), :controller => 'roles'%>
+						<%= link_to image_tag("../../assets/admin11.jpg", :height=> 150, :class=>'img-circle img-borde'), :controller => 'roles'%>
 
 
 						<h3>Roles de usuarios</h3>
@@ -63,7 +63,7 @@
 
 					</div>
 					<div class="col-lg-4 ">
-						<%= link_to image_tag("http://previewcf.turbosquid.com/Preview/Content_2010_10_05__13_25_34/NY_cab_01.jpg6e52d934-0bfe-45c8-8fa2-c925bff51d06Larger.jpg", :height=> 150, :class=>'img-circle img-borde'), :controller => 'vehicles'%>
+						<%= link_to image_tag("../../assets/admin12.jpg", :height=> 150, :class=>'img-circle img-borde'), :controller => 'vehicles'%>
 
 
 						<h3>Vehículos</h3>
