--- a/ProyectoPBD/app/views/devise/registrations/edit.html.erb
+++ b/ProyectoPBD/app/views/devise/registrations/edit.html.erb
@@ -1,3 +1,9 @@
+<div class="container marg2">
+    <br><br><br>
+
+        <div class="row">
+
+            <div class="col-lg-12 ">
 <h2>Editar Usuario: <%= current_user.nombre%></h2>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
@@ -24,6 +30,7 @@
 
 <h3>Cancelar mi cuenta</h3>
 
-<p>Unhappy? <%= button_to "Cancelar mi cuenta", registration_path(resource_name), :data => { :confirm => "Estás seguro?" }, :method => :delete %></p>
+<p><%= button_to "Cancelar mi cuenta", registration_path(resource_name), :data => { :confirm => "Estás seguro?" }, :method => :delete %></p>
 
-<%= link_to "Atras", :back %>
+<%= button_to "Atras", :back, :method=>"get",:class=>'btn btn-default' %>
+</div></div></div>
